--- a/ClothsMall/src/main/webapp/qna/css/style.css
+++ b/ClothsMall/src/main/webapp/qna/css/style.css
@@ -1,223 +1,19 @@
-@CHARSET "UTF-8";
-
-html, body, div{
-margin: 0;
-padding: 0;
-border: 0;
-outline: 0;
-font-weight: inherit;
-font-style: inherit;
-font-size: 100%;
-font-family: inherit;
-vertical-align: baseline;
+#writeForm, editForm {
+	width: 600px;
+	margin: 0 auto;
+	text-align: right;
 }
 
-:focus {
-outline: 0;
+#writeBDiv, #editBDiv {
+	width: 600px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 20px;
 }
-body {
-line-height: 1;
-color: black;
+#writeForm table {
+	width: 100%;
 }
-ol, ul {
-list-style: none;
-margin : 1em;
-}
-
-div{
-margin : 0.5em;
-}
-.box{
-display: inline-block;
-/왼쪽부터 채워지다가 자리가 모자라면 아래로 자연스럽게 흐르듯이 배치/
-
-.box2{
-clear: both;
-display: block;
-}
-
-.box3{
-clear: both;
-display: block;
-text-align : center;
-}
-
-ul li{
-list-style:none;
-}
-/*ul, li{
-margin : 0px;
-padding: 0px;
-border : 1px solid black;
-border-collapse : collapse;
-}
-#cata ul{
-border : 0;
-}
-*/
-table, tr, th, td{
-border : 1px solid black;
-border-collapse : collapse;
-}
-
-#showBook tr{
-border:0;
-}
-#showBook tr td{
-border:0;
-}
-#cata ul li{
-border : 0;
-padding: 0.5em;
-background: linear-gradient(90deg, #ffffff 0%, #e4e4e4 50%, #ffffff 100%)
-}
-#cata ul li a {
-height: 42px;
-text-decoration: none;
-text-align : center;
-color : black;
-}
-/* flexbox 기능 문학 어학 컴퓨터 전체 시작 /
-#cata.box2 ul {
-display: flex;
-justify-content: start; / Adjust this as needed */
-padding: 0;
-list-style-type: none;
-}
-
-#cata.box2 ul li {
-margin: 0 10px; /* Adjust the spacing between items as needed */
-}
-
-#cata.box2 ul li a {
-text-decoration: none;
-color: #000; /* Adjust link color as needed */
-}
-
-#cata.box2 ul li a:hover {
-text-decoration: underline; /* Add hover effect if desired /
-}
-/ flexbox 기능 문학 어학 컴퓨터 전체 끝*/
-#mList ul li{
-margin : 0.5em;
-}
-#lStatus,#mStatus,#status{
-background-color : #CAE2F7;
-margin : 0px;
-padding: 0px;
-}
-body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-    }
-    h1 {
-        margin-bottom: 20px;
-    }
-    form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 20px;
-    }
-    label {
-        margin-bottom: 10px;
-    }
-    input[type="text"], textarea {
-        width: 300px;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
-    textarea {
-        resize: vertical;
-    }
-    input[type="submit"] {
-        padding: 10px 20px;
-        background-color: #6A24FE;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-#regForm ul li{
-margin : 1em;
-}
-
-#info table, #info table tr, #info table tr td{
-border : 0;
-}
-#cinfo table, #cinfo table tr, #cinfo table tr td{
-border : 0;
-}
-.noborder{
-border : 0px;
-}
-
-.inline{
-display: inline;
-}
-
-.cau{
-color : red;
-font-size : 9pt;
-}
-
-.title{ 
-background-color : #A5CFF1;
-text-align : center;
-}
-
-.listimage{
-border: 0;
-width :40px;
-height:72px;
-}
-.cartimage{
-border: 0;
-width :30px;
-height:50px;
-}
-.contentimage{
-border: 0;
-width :150px;
-height:200px;
-}
-
-.b{
-font-weight: bold;
-
-}
-
-.bred{
-color : red;
-font-weight: bold;
-
-}
-
-.vhcenter{
-text-align : center;
-vertical-align : middle;
-}
-
-.cen{
-text-align : center;
-}
-
-.date{
-display: inline;
-text-align : center;
-color : gray;
-font-size : 9pt;
-margin : 5px;
-}
-
-.ch{
-height : 100px;
-}
-.hleft{
-text-align : left;
-}
-.re{
-margin: 20px;
+#editForm table {
+	width: 100%;
 }
